--- a/views/user/token_password.ejs
+++ b/views/user/token_password.ejs
@@ -72,10 +72,10 @@
                         <div class="login-content card" style="border-radius: 4%">
                             <div class="login-form">
                                 <h4><%=title%></h4>
-                                <form name="formtovalidate" onsubmit="return validateForm()" action="/users/signup" method="POST">
+                                <form name="formtovalidate" onsubmit="return validateForm()" action="/users/reset/<%=token%>" method="POST">
                                     <div class="form-group">
                                         <label class="control-label">Password</label>
-                                        <input onkeyup="validate()" type="password" data-minlength="8" maxlength="50" class="form-control" id="inputPassword" placeholder="Example: Abcd_1234" required>
+                                        <input onkeyup="validate()" type="password" data-minlength="8" maxlength="50" class="form-control" id="inputPassword" placeholder="Example: Abcd_1234" name="newpassword" required>
                                         <div class="help-block" id = "passval"></div>
                                         <div class="help-block" id = "passval2"></div>
                                         <div class="help-block" id = "passval3"></div>
@@ -83,8 +83,9 @@
                                     </div>
                                     <div class="form-group">
                                       <label class="control-label">Password Confirm</label>
-                                      <input onkeyup="validate()" type="password" class="form-control" id="inputPasswordConfirm" placeholder="Confirm" required name="password">
+                                      <input onkeyup="validate()" type="password" class="form-control" id="inputPasswordConfirm" placeholder="Confirm" required name="confirmpassword">
                                       <div class="help-block with-errors" id = "passconfirmation"></div>
+                                      
                                     </div>                                    
                                     <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30" id="submitButton">Change Password</button>                                    
                                 </form>
