--- a/views/user/dashboard/main.ejs
+++ b/views/user/dashboard/main.ejs
@@ -45,7 +45,7 @@
                                     <span><i class="fa fa-usd f-s-40 color-primary"></i></span>
                                 </div>
                                 <div class="media-body media-text-right">
-                                    <h2>0</h2>
+                                    <h2><%=balancev%></h2>
                                     <p class="m-b-0">Balance</p>
                                 </div>
                             </div>
