--- a/views/user/dashboard/credit.ejs
+++ b/views/user/dashboard/credit.ejs
@@ -57,7 +57,7 @@
                                 <tr>
                                     <td><%=data[i].number_acc%></td>
                                     <td><%=data[i].name_bank%></td>
-                                    <td>$<%=balances[i]%></td>                                    
+                                    <td><%=balances[i]%></td>                                    
                                     <td><button class="btn btn-primary btn-flat" onclick="deleteAcc(this)">Delete</button></td>
                                 </tr>
                                 <% } %>
