--- a/views/user/dashboard/group_accounts.ejs
+++ b/views/user/dashboard/group_accounts.ejs
@@ -37,28 +37,30 @@
             <div class="container-fluid">
                 <!-- Start Page Content -->
                 <div class="row">
-                
                 <%if (data.length > 0) { %>
                     <% for(let i = 0; i < data.length; i++) { %>
                         <div class="col-md-3">
-                        <a href="/users/dashboard/showgroup">
-                        <div class="card p-30">
-                            <div class="media">
-                                <div class="media-left meida media-middle">
-                                    <span><i class="fa fa-object-group f-s-40 color-primary"></i></span>
-                                </div>
-                                <div class="media-body media-text-right">
-                                    <h2><%data[i].name_groupAcc%></h2>
+                        <form id="formgroup" action="/users/dashboard/showgroup/" method="post">
+                            <input type="hidden" name="nombregrupo" value="<%=data[i].name_groupAcc%>" />
+                            <a href="#" onclick="document.getElementById.("formgroup").submit()">
+                            <div class="card p-30">
+                                <div class="media">
+                                    <div class="media-left meida media-middle">
+                                        <span><i class="fa fa-object-group f-s-40 color-primary"></i></span>
+                                    </div>
+                                    <div class="media-body media-text-right">
+                                        <h2><%=data[i].name_groupAcc%></h2>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        </a>
+                            </a>
+                        </form>
                     </div>
                     <% } %>
                 <% } else { %>
                 <!--Caja para renderizar-->
                      <div class="col-md-3">
-                        <a href="/users/dashboard/showgroup">
+                        <a href="#">
                         <div class="card p-30">
                             <div class="media">
                                 <div class="media-left meida media-middle">
